Fix an alignment issue with tickets table on mobile

--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -60,7 +60,7 @@
   }
 }
 
-.ticket-table {
+.tickets-box table {
   width: 100%;
   font-size: 18pt;
 
@@ -278,15 +278,19 @@
     margin-bottom: 30px
   }
 
-  .ticket-table {
-    margin: 0 auto;
-    width: 95%;
-
-    td {
-      font-size: 13pt;
-      line-height: 14pt
+  .tickets-box {
+    p {
+      margin-left: 10px;
     }
+    table {
+      margin: 0 auto;
+      width: 95%;
 
+      td {
+        font-size: 13pt;
+        line-height: 14pt
+      }
+    }
   }
 
   .masthead {
